# wat

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Gopkg.toml  LICENSE  Makefile  README.md  Rocket.toml  app.go  b0x.toml  config.go  docker-compose.yml  go.mod  go.sum  handlers.go  main.go  middleware.go  package-lock.json  package.json  router.go  wat.db  webpack.config.js
app/: App.svelte  index.html  index.js  main.js  package.json
app/components/: Navbar.vue
app/http/: router.js  routes.js
app/pages/: Index.vue  Login.vue
ci/: release.sh
lib/: app.go  auth.go  config.go  handlers.go  middleware.go  router.go
lib/handlers/: postHeartbeat.go
lib/models/: heartbeat.go  user.go
migrations/2019-04-15-212318_initial/: up.sql
migrations/2019-08-24-034811_initial/: up.sql
migrations/postgres/2019-04-15-212318_initial/: down.sql
models/: user.go
public/: bundle.css  bundle.js  index.html
src/: captcha.rs  config.rs  context.rs  db.rs  errors.rs  main.rs  migrate.rs  models.rs  schema.rs  utils.rs
src/api_v1/: api_key.rs  auth.rs  heartbeats.rs  mod.rs  summary.rs  users.rs
src/db/: mod.rs
src/models/: heartbeats.rs  mod.rs  users.rs
src/utils/: captcha.rs  context.rs  either.rs  formdate.rs  mod.rs
src/views/: base.rs  mod.rs  stats.rs  users.rs
src/views/forms/: login.rs  mod.rs  register.rs
static/: .gitignore  dynamic.go  main.css  static.go
templates/: dashboard.html.tera  layout.html.tera  login.html.tera  register.html.tera  settings.html.tera
web/: App.vue  index.html  index.js  package-lock.json  package.json  rollup.config.js
web/components/: Navbar.vue
web/http/: index.js  routes.js
web/pages/: Index.vue
web/src/: App.vue  index.js
web/src/http/: routes.js
web/src/pages/: Index.vue
