[package]
name = "wat"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[features]
default = ["sqlite"]
sqlite = ["rocket_contrib/diesel_sqlite_pool"]

[dependencies]
base64 = "0.10"
bcrypt = "0.5"
captcha = "0.0"
chrono = { version = "0.4", features = ["serde"] }
derivative = "1.0"
diesel = { version = "1.4", features = ["extras"] }
diesel_migrations = "1.4"
env_logger = "0.6"
hex = "0.3"
log = "0.4"
packer = "0.4"
rand = "0.7"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json", "serve", "tera_templates"] }
serde = "1.0"
serde_derive = "1.0"
structopt = "0.2"
toml = "0.5"
uuid = { version = "0.7", features = ["v4"] }
